<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_student_home"
            android:icon="@drawable/ic_home_blue_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_student_start_learning"
            android:icon="@drawable/ic_play_learning_blue_24dp"
            android:title="@string/menu_start_learning" />
        <item
            android:id="@+id/nav_student_profile"
            android:icon="@drawable/ic_profile_blue_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_student_activity"
            android:icon="@drawable/ic_activity_blue_24dp"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_student_contact"
            android:icon="@drawable/ic_contact_mail_blue_24dp"
            android:title="@string/menu_contact" />
    </group>
</menu>
