<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_blue_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_profile_blue_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_contact_mail_blue_24dp"
            android:title="@string/menu_contact" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_play_learning_blue_24dp"
            android:title="@string/menu_start_teaching" />
    </group>
</menu>
