<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_student_home">

    <fragment
        android:id="@+id/nav_student_home"
        android:name="com.readmycourse.android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_student_start_learning" />
    </fragment>
    <fragment
        android:id="@+id/nav_student_start_learning"
        android:name="com.readmycourse.android.ui.learning.StudentStartLearningFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home">

    </fragment>

    <fragment
        android:id="@+id/nav_student_profile"
        android:name="com.readmycourse.android.ui.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_student_activity"
        android:name="com.readmycourse.android.ui.activity.ActivityFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_student_contact"
        android:name="com.readmycourse.android.ui.contact.ContactFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_home" />
</navigation>